# applied-ai

./: Makefile  Pipfile  README.md  pyproject.toml
applied_ai/: __init__.py  dataset.py  features.py  perceptron-algorithm-on-bank-marketing.py  perceptron-algorithm.py  plots.py  search_server.py
applied_ai/first_ai_agent/: main.py
applied_ai/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: how-to-get-a-RAG-application-to-add-citations.ipynb  how-to-implement-resampling-methods-from-scratch-in-python.ipynb  mcp_powered_agents_cookbook.ipynb  practice.ipynb  structured_outputs.ipynb  tokenization.ipynb
notebooks/langchain-academy/module-1/studio/: simple.py
