[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "applied_ai"
version = "0.0.1"
description = "\"Everything I learn about AI is applied here:D\""
authors = [
  { name = "VaibhavSethia07" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10"
dependencies = [
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.47",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "langgraph-checkpoint-sqlite>=2.0.6",
    "langgraph-cli[inmem]>=0.1.79",
    "langgraph-sdk>=0.1.58",
    "langsmith>=0.3.18",
    "notebook>=7.3.3",
    "tavily-python>=0.5.1",
    "trustcall>=0.0.38",
    "wikipedia>=1.4.0",
]

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["applied_ai"]
force_sort_within_sections = true
